--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,8 @@
 }
 header {
     background-color: var(--secondary-color);
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 body {
     background-color: var(--offwhite);
@@ -26,7 +28,14 @@ body {
     font-size: 22px;
     margin: 0;
     padding: 0;
-
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 main section img {
     box-sizing: border-box;
@@ -38,6 +47,9 @@ footer {
     background-color: var(--secondary-color);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     text-decoration: none;
@@ -82,6 +94,7 @@ nav a:hover {
     background-color: var(--accent1-color);
     line-height: 1.5em;
     padding: 35px;
+    box-shadow: 5px 5px 10px var(--secondary-color);
 }
 .msg h2 {
     color: var(--primary-color);
@@ -104,8 +117,25 @@ h4 {
     color: var(--primary-color);
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 .button-box {
     text-align: center;
@@ -127,8 +157,10 @@ main section {
     width: 100%
 }
 
-#logo-link {
+#logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .rivers-card, .camping-card, .rapids-card {
@@ -136,5 +168,81 @@ main section {
 }
 
 .card-img {
-    border: 10px solid black; /*TODO check color*/
+    width: 100%;
+    border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px var(--secondary-color);
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px var(--secondary-color);
+}
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
